# actionstar-rs

./: .envrc  .gitignore  .rustfmt.toml  Cargo.nix  Cargo.toml  Makefile  default.nix  shell.nix
.github/workflows/: rust.yaml  test.yaml
nix/: default.nix  sources.json
src/: main.rs
