[package]
name = "actionstar"
version = "0.1.0"
authors = ["Shane Sveller <shanesveller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3"
k8s-openapi = { version = "0.7", features = ["v1_15"] }
k8s-openapi-derive = "0.7"
kube = "0.27"
log = "0.4"
pretty_env_logger = "0.4"
prometheus = "0.8"
tokio = "0.2"
