[package]
name = "actionstar"
version = "0.1.0"
authors = ["Shane Sveller <shanesveller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1"
actix-web = "2"
anyhow = "1.0"
futures = "0.3"
futures-timer = "3.0"
k8s-openapi = { version = "0.7", features = ["v1_15"] }
k8s-openapi-derive = "0.7"
kube = { version = "0.27", features = ["openapi"] }
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
prometheus = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = "0.2"
